[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/blue.png" type="Texture" id=1]
[ext_resource path="res://Interface/Position.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 1 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 20 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 50, 50 )

[node name="Area2D" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )

[node name="Up" type="CollisionShape2D" parent="."]
position = Vector2( 0, -55 )
shape = SubResource( 4 )

[node name="Right" type="CollisionShape2D" parent="."]
position = Vector2( 55, 0 )
shape = SubResource( 1 )

[node name="Down" type="CollisionShape2D" parent="."]
position = Vector2( 0, 55 )
shape = SubResource( 3 )

[node name="Left" type="CollisionShape2D" parent="."]
position = Vector2( -55, 0 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[connection signal="area_shape_entered" from="." to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_Area2D_area_shape_exited"]
[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
